# MCP_Email_RW

./: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  INSTRUCTIONS.md  README.md  config.example.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: accounts.example.json
config/providers/: custom.json  gmail.json  icloud.json  ionos.json  outlook.json  ovh.json  yahoo.json
config/schema/: accounts.schema.json
docs/: AUTHENTICATION.md  CONTRIBUTING.md  PROVIDERS.md  SETUP.md  TOOLS_REFERENCE.md
src/: index.ts  server.ts
src/auth/: auth-detector.ts  auth-manager.ts  index.ts  types.ts
src/auth/strategies/: app-password.strategy.ts  (+2 more)
src/config/: config-manager.ts  config-schema.ts  defaults.ts  types.ts
src/mcp_email_rw/: __init__.py  config.py  imap_client.py  pop3_client.py  server.py  smtp_client.py
src/prompts/: cleanup-suggestions.prompt.ts  compose-email.prompt.ts  daily-briefing.prompt.ts  draft-reply.prompt.ts  important-emails.prompt.ts  index.ts  summarize-inbox.prompt.ts
src/resources/: account-list.resource.ts  index.ts  server-capabilities.resource.ts
src/services/: email-manager.service.ts  email-parser.service.ts  imap.service.ts  index.ts  smtp.service.ts
src/tools/: index.ts
src/types/: email.types.ts  mcp.types.ts  protocol.types.ts
src/utils/: date-utils.ts  errors.ts  logger.ts  validators.ts
tests/: test_config.py  test_imap_client.py  test_pop3_client.py  test_server.py  test_smtp_client.py
(+46 files in other folders)
